--- a/package.json
+++ b/package.json
@@ -1,15 +1,31 @@
 {
-    "name": "bot",
-    "description": "Klim Private Bot",
-    "version": "0.0.0",
-    "main": "bot.js",
-    "scripts": {
-      "start": "node bot.js"
-    },
-    "dependencies": {
-      "discord.js": "11.3.0",
-      "ms": "2.1.1",
-      "twitch.tv-api": "1.2.4",
-      "fs": "0.0.1-security"
-    }
-  }
+  "name": "klimbot",
+  "description": "Klim Private Bot",
+  "version": "0.0.0",
+  "main": "bot.js",
+  "scripts": {
+    "start": "node bot.js"
+  },
+  "dependencies": {
+    "colors": "^1.3.3",
+    "discord.js": "^11.4.2",
+    "duration": "^0.2.2",
+    "fs": "0.0.1-security",
+    "ms": "2.1.1",
+    "request": "2.88.0",
+    "twitch.tv-api": "1.2.4",
+    "url": "0.11.0",
+    "ytdl-core": "^0.28.1"
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/RisedSky/klim_bot.git"
+  },
+  "author": "RisedSky",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/RisedSky/klim_bot/issues"
+  },
+  "homepage": "https://github.com/RisedSky/klim_bot#readme"
+}
