--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "colors": "^1.3.3",
     "discord.js": "^11.4.2",
     "duration": "^0.2.2",
+    "moment": "2.22.2",
     "fs": "0.0.1-security",
     "ms": "2.1.1",
     "request": "2.88.0",
