--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "start": "node bot.js"
   },
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.0.16",
     "colors": "^1.3.3",
     "discord.js": "^11.4.2",
     "duration": "^0.2.2",
-    "moment": "2.22.2",
     "fs": "0.0.1-security",
+    "moment": "2.22.2",
     "ms": "2.1.1",
     "request": "2.88.0",
     "twitch.tv-api": "1.2.4",
