--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "fs": "0.0.1-security",
     "moment": "2.22.2",
     "ms": "2.1.1",
-    "opusscript": "0.0.6",
+    "node-opus": "^0.3.1",
     "request": "2.88.0",
     "twitch.tv-api": "1.2.4",
     "url": "0.11.0",
