--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
   },
   "dependencies": {
     "@ffmpeg-installer/ffmpeg": "^1.0.16",
+    "bufferutil": "^4.0.0",
     "colors": "^1.3.3",
     "discord.js": "^11.4.2",
     "duration": "^0.2.2",
+    "erlpack": "^0.1.2",
     "ffmpeg-binaries": "^4.0.0",
     "fs": "0.0.1-security",
+    "libsodium-wrappers": "^0.7.3",
     "moment": "2.22.2",
     "ms": "2.1.1",
     "node-opus": "^0.3.1",
