--- a/package.json
+++ b/package.json
@@ -1,24 +1,25 @@
 {
   "name": "klimbot",
-  "description": "Klim Private Bot",
-  "version": "0.0.0",
+  "description": "KLIM Private Bot",
+  "version": "1.0.0",
   "main": "bot.js",
   "scripts": {
     "start": "node bot.js"
   },
   "dependencies": {
+    "@discordjs/uws": "^11.149.1",
     "@ffmpeg-installer/ffmpeg": "^1.0.16",
-    "bufferutil": "^4.0.0",
+    "bufferutil": "^3.0.3",
     "colors": "^1.3.3",
     "discord.js": "^11.4.2",
     "duration": "^0.2.2",
-    "erlpack": "^0.1.2",
+    "erlpack": "github:discordapp/erlpack",
     "ffmpeg-binaries": "^4.0.0",
     "fs": "0.0.1-security",
     "libsodium-wrappers": "^0.7.3",
     "moment": "2.22.2",
     "ms": "2.1.1",
-    "node-opus": "^0.3.1",
+    "node-opus": "^0.2.7",
     "request": "2.88.0",
     "twitch.tv-api": "1.2.4",
     "url": "0.11.0",
